--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,11 +6,11 @@
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
 play.http.secret.key="%APPLICATION_SECRET%"
-application.context="/st"
+play.http.context = "/st"
 
 # The application languages
 # ~~~~~
-application.langs="en"
+play.i18n.langs = ["en", "en-US"]
 
 # Global object class
 # ~~~~~
@@ -66,3 +66,9 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+
+play.filters.headers.frameOptions = null
+play.filters.headers.contentSecurityPolicy = null
+
+
+ste.application.version = "1.0.0"
