--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,7 +6,7 @@
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
 play.http.secret.key="%APPLICATION_SECRET%"
-play.http.context = "/st"
+play.http.context = "/ste"
 
 # The application languages
 # ~~~~~
