Updated db connection details

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,9 +40,9 @@ play.i18n.langs = ["en", "en-US"]
 # db.default.password=""
 
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://ifxdev.ncats.nih.gov:5432/chembl_23"
-db.default.username="guhar"
-db.default.password="ChemblRD23"
+db.default.url="jdbc:postgresql://ifxdev.ncats.nih.gov:5433/chembl_23"
+db.default.username="chembl_23"
+db.default.password="chembl_23"
 db.default.readOnly = true
 db.default.connectionTestQuery="SELECT 1"
 
