Added production URL

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,6 +40,7 @@ play.i18n.langs = ["en", "en-US"]
 # db.default.password=""
 
 db.default.driver=org.postgresql.Driver
+##db.default.url="jdbc:postgresql://128.231.11.166:5432/chembl_23"
 db.default.url="jdbc:postgresql://ifxdev.ncats.nih.gov:5433/chembl_23"
 db.default.username="chembl_23"
 db.default.password="chembl_23"
