Shifted bookmarked scaffolds to a conf file and updated front end to dynamically generate bookmark menu Added config for hosts to listen to Added more scaffold bookmark entries Bumped version number

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,30 +34,31 @@ play.i18n.langs = ["en", "en-US"]
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
+#db.default.user=sa
+#db.default.password=""
 
 db.default.driver=org.postgresql.Driver
-##db.default.url="jdbc:postgresql://128.231.11.166:5432/chembl_23"
-db.default.url="jdbc:postgresql://ifxdev.ncats.nih.gov:5433/chembl_23"
+db.default.url = "jdbc:postgresql://128.231.11.166:5432/chembl_23"
+##db.default.url="jdbc:postgresql://ifxdev.ncats.nih.gov:5433/chembl_23"
 db.default.username="chembl_23"
 db.default.password="chembl_23"
 db.default.readOnly = true
 db.default.connectionTestQuery="SELECT 1"
-
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
 evolutionplugin=disabled
 
-
-
-
 play.filters.headers.frameOptions = null
 play.filters.headers.contentSecurityPolicy = null
 
+ste.application.version = "1.0.4"
 
-ste.application.version = "1.0.3"
+play.filters.hosts {
+ allowed = ["."]
+}
+
+include "bookmarks.conf"
